packages/core/src/forms/control-label/control-label.element.scss
// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
// This software is released under MIT license.
// The full license information can be found in LICENSE in the root directory of this project.

@import './../../styles/tokens/generated/index';
@import './../../styles/mixins/mixins';

:host([action='primary']) {
  min-width: var(--internal-label-min-width, initial);
}

::slotted([slot='label']) {
  font-family: $cds-global-typography-font-family !important;
  max-width: var(--internal-label-max-width, initial) !important;
  display: inline-block !important;
  text-transform: capitalize !important;
  cursor: pointer !important;

  @include line-height-eraser(
    getLineHeightGap($cds-global-typography-secondary-line-height-static, $cds-global-typography-secondary-line-height),
    $cds-global-typography-top-gap-height,
    $cds-global-typography-ascender-height,
    $cds-global-typography-x-height
  );

  font-size: $cds-global-typography-secondary-font-size !important;
  font-weight: $cds-global-typography-secondary-font-weight !important;
  color: $cds-global-typography-color-300 !important;
  line-height: $cds-global-typography-secondary-line-height !important;
  letter-spacing: $cds-global-typography-secondary-letter-spacing !important;
}

:host([disabled]) ::slotted([slot='label']) {
  color: $cds-alias-status-disabled !important;
  cursor: not-allowed !important;
}

:host([action='primary']) ::slotted([slot='label']) {
  font-weight: bold !important;
}

::slotted(cds-control-action) {
  padding: $cds-global-space-4 0 $cds-global-space-3 0 !important;
  margin-bottom: calc(-1 * #{$cds-global-space-5}) !important;
  margin-top: calc(-1 * calc(#{$cds-global-space-6} - #{$cds-global-space-2})) !important;
}

